ch03/06: 改写 flag 类型说明——product/diagnostic/experimental 各给命令行示例